# Routigo

./: .gitignore  CLAUDE.md  MIGRATION_LOG.md  PRD.md  PROJECT_PLAN.md  README.md  TECHNICAL_SPEC.md  issues_faced.md
backend/: .dockerignore  .gitignore  .railwayignore  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  models.py  schemas.py
backend/app/agent/: callbacks.py  core.py  output_parser.py  prompts.py  tools.py
backend/app/routers/: agent.py  history.py  stats.py  trips.py
backend/app/services/: geocoding_service.py  groq_client.py  moderation_service.py  rag_service.py  trips_service.py  vector_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: manifest.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ChatInput.jsx  Header.jsx  LogoutModal.jsx  MessageBubble.jsx  SaveTripModal.jsx  SemanticSearchBar.jsx  StopItem.jsx  StopList.jsx  Toast.jsx  TripCard.jsx  VoiceInputButton.jsx
frontend/src/screens/: AccountScreen.jsx  AuthScreen.jsx  ChatScreen.jsx  HistoryScreen.jsx  HomeScreen.jsx  LLMLogsScreen.jsx  LandingPage.jsx  PreviewScreen.jsx  StatsScreen.jsx  TripDetailScreen.jsx  TripsScreen.jsx
frontend/src/store/: chatStore.js  toastStore.js  tripStore.js
frontend/src/utils/: mapsLinks.js
